[workspace]
members = ["units-core", "units-derive", "units"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/Siderust/units"
keywords = ["astronomy", "units", "science"]
categories = ["science", "aerospace"]
