[package]
name = "qtty-core"
description = "Core types for zero-cost strongly-typed physical quantities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/qtty-core"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
pyo3 = { version = "0.27.2", optional = true }
libm = "0.2"
qtty-derive = "0.1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
