[package]
name = "qtty-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ffi", "quantities", "c", "interop", "science"]
categories = ["science", "development-tools::ffi", "api-bindings"]
description = "C-compatible FFI bindings for qtty physical quantities and unit conversions"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
qtty = { version = "0.2.0", path = "../qtty", default-features = true, features = [] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
# Enable serde-based JSON serialization in the FFI layer.
# This pulls in `qtty`'s serde support and exposes C APIs for JSON
# serialize/deserialize of quantities.
serde = ["dep:serde", "dep:serde_json", "qtty/serde"]

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
approx = "0.5"
