[package]
name = "qtty"
description = "Strongly typed physical and astronomical quantities."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/qtty"

[features]
default = ["std"]
std = ["qtty-core/std"]
serde = ["qtty-core/serde"]

[dependencies]
qtty-core = { version = "0.1.0", path = "../qtty-core", default-features = false }
qtty-derive = { version = "0.1.0", path = "../qtty-derive" }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
