[package]
name = "siderust-units"
description = "Strongly typed physical and astronomical units."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
std = ["units-core/std"]
serde = ["units-core/serde"]

[dependencies]
units-core = { path = "../units-core" }
units-derive = { path = "../units-derive" }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
