[package]
name = "unit"
description = "Strongly typed physical and astronomical units."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
documentation = "https://docs.rs/unit"

[features]
default = ["std"]
std = ["unit-core/std"]
serde = ["unit-core/serde"]

[dependencies]
unit-core = { version = "0.1.0", path = "../units-core", default-features = false }
unit-derive = { version = "0.1.0", path = "../units-derive" }

[dev-dependencies]
approx = "0.5"
proptest = "1.4"
serde_json = "1.0"
